
[TestFeatures/appstudio error nofail:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "",
  "successes": 0,
  "failures": 0,
  "warnings": 0,
  "result": "ERROR",
  "note": "Error: running test: load: loading policies: load: 1 error occurred during loading: stat file/not/exist.rego: no such file or directory"
}
---

[TestFeatures/appstudio error nofail:stderr - 1]
Error: running test: load: loading policies: load: 1 error occurred during loading: stat file/not/exist.rego: no such file or directory

---

[TestFeatures/appstudio warning:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "main",
  "successes": 0,
  "failures": 0,
  "warnings": 1,
  "result": "WARNING",
  "note": "Warnings detected"
}
---

[TestFeatures/appstudio warning:stderr - 1]

---

[TestFeatures/a warning:stdout - 1]
[
  {
    "filename": "acceptance/examples/empty_input.json",
    "namespace": "main",
    "successes": 0,
    "warnings": [
      {
        "msg": "Has a warning",
        "metadata": {
          "query": "data.main.warn"
        }
      }
    ]
  }
]
---

[TestFeatures/a warning:stderr - 1]

---

[TestFeatures/a different appstudio error:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "",
  "successes": 0,
  "failures": 0,
  "warnings": 0,
  "result": "ERROR",
  "note": "Error: running test: parse configurations: parser unmarshal: unmarshal json: invalid character '\\n' in string literal, path: acceptance/examples/broken_input.json"
}
---

[TestFeatures/a different appstudio error:stderr - 1]
Error: running test: parse configurations: parser unmarshal: unmarshal json: invalid character '\n' in string literal, path: acceptance/examples/broken_input.json

---

[TestFeatures/appstudio success:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "main",
  "successes": 1,
  "failures": 0,
  "warnings": 0,
  "result": "SUCCESS",
  "note": "All checks passed successfully"
}
---

[TestFeatures/a deny with no-fail:stdout - 1]
[
  {
    "filename": "acceptance/examples/empty_input.json",
    "namespace": "main",
    "successes": 0,
    "failures": [
      {
        "msg": "Failure due to overripeness",
        "metadata": {
          "query": "data.main.deny"
        }
      }
    ]
  }
]
---

[TestFeatures/appstudio success:stderr - 1]

---

[TestFeatures/a deny with no-fail:stderr - 1]

---

[TestFeatures/appstudio deny:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "main",
  "successes": 0,
  "failures": 1,
  "warnings": 0,
  "result": "FAILURE",
  "note": "Failures detected"
}
---

[TestFeatures/a deny:stdout - 1]
[
  {
    "filename": "acceptance/examples/empty_input.json",
    "namespace": "main",
    "successes": 0,
    "failures": [
      {
        "msg": "Failure due to overripeness",
        "metadata": {
          "query": "data.main.deny"
        }
      }
    ]
  }
]
---

[TestFeatures/appstudio deny:stderr - 1]

---

[TestFeatures/a deny:stderr - 1]

---

[TestFeatures/a warning with fail-on-warn:stdout - 1]
[
  {
    "filename": "acceptance/examples/empty_input.json",
    "namespace": "main",
    "successes": 0,
    "warnings": [
      {
        "msg": "Has a warning",
        "metadata": {
          "query": "data.main.warn"
        }
      }
    ]
  }
]
---

[TestFeatures/a warning with fail-on-warn:stderr - 1]

---

[TestFeatures/appstudio skipped:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "main",
  "successes": 0,
  "failures": 0,
  "warnings": 0,
  "result": "SKIPPED",
  "note": "All checks were skipped"
}
---

[TestFeatures/appstudio skipped:stderr - 1]

---

[TestFeatures/plain text deny:stdout - 1]
FAIL - acceptance/examples/empty_input.json - main - Failure due to overripeness

1 test, 0 passed, 0 warnings, 1 failure, 0 exceptions

---

[TestFeatures/plain text deny:stderr - 1]

---

[TestFeatures/appstudio error:stdout - 1]
{
  "timestamp": "${TIMESTAMP}",
  "namespace": "",
  "successes": 0,
  "failures": 0,
  "warnings": 0,
  "result": "ERROR",
  "note": "Error: running test: load: loading policies: load: 1 error occurred during loading: stat file/not/exist.rego: no such file or directory"
}
---

[TestFeatures/normal error:stdout - 1]

---

[TestFeatures/appstudio error:stderr - 1]
Error: running test: load: loading policies: load: 1 error occurred during loading: stat file/not/exist.rego: no such file or directory

---

[TestFeatures/normal error:stderr - 1]
Error: running test: load: loading policies: load: 1 error occurred during loading: stat file/not/exist.rego: no such file or directory

---

[TestFeatures/success:stdout - 1]
[
  {
    "filename": "acceptance/examples/empty_input.json",
    "namespace": "main",
    "successes": 1
  }
]
---

[TestFeatures/success:stderr - 1]

---
